--- a/Exercice CSS/CSS feuille 2/styles/styles.css
+++ b/Exercice CSS/CSS feuille 2/styles/styles.css
@@ -1,50 +1,137 @@
-header /*Mise en page header */
-{
-    background-color: green;
-    padding: 15px;
+header /*Mise en page header */ {
+  background-color: green;
+  padding: 15px;
 }
 
-header h1, header p
-{
-text-align: center;
-color: white;
+header h1,
+header p {
+  text-align: center;
+  color: white;
 }
 
-header h1
-{
-    font-size: 40px;
+header h1 {
+  font-size: 40px;
 }
-header p
-{
-    font-size: 18px;
+header p {
+  font-size: 18px;
 }
 
-#menu /* Mise en page lien menu "se connecter" */
-{
-    position: absolute;
-    right: 0;
-    list-style-type: none;
-    background-color: yellow;
-    padding: 5px;
-    margin-top: 15px;
-    margin-right: 15px;
-    width: fit-content;
-    border: 2px solid black;
-    border-radius: 5px;
+#menu /* Mise en page lien menu "se connecter" */ {
+  position: absolute;
+  right: 0;
+  list-style-type: none;
+  background-color: yellow;
+  padding: 0;
+  margin-top: 15px;
+  margin-right: 15px;
+  width: fit-content;
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
-#menu a
-{
-    color: red;
-    text-decoration: none;
+#menu a {
+  padding: 5px;
+  color: red;
+  text-decoration: none;
 }
 
-#menu:hover, #menu:focus
-{
-    background-color: red;
+#menu:hover,
+#menu:focus {
+  background-color: red;
 }
 
-#menu a:hover, #menu a:focus
-{
-    color: yellow;
+#menu a:hover,
+#menu a:focus {
+  color: yellow;
+}
+
+#menu a:hover {
+  padding: 5px;
+}
+
+#menu2 /*Mise en page deuxieme menu */ {
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+#menu2 a {
+  text-decoration: none;
+  color: black;
+  text-decoration: none;
+}
+
+#menu2 li {
+  margin-top: 10px;
+  margin-right: 10px;
+  list-style-type: none;
+}
+
+.li_menu2_roman {
+  border: 2px solid black;
+  border-bottom-style: none;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-weight: bold;
+}
+
+.li_menu2 {
+  padding-right: 15px;
+  padding-left: 15px;
+  border: 2px solid black;
+}
+
+/* Mise en page des Section */
+
+section h2 {
+  font-size: 33px;
+}
+
+section img {
+  float: right;
+  width: 200px;
+  height: auto;
+}
+
+section h3 {
+  font-size: 30px;
+}
+
+section p {
+  font-size: 18px;
+}
+
+/* Mise en page affichage livre */
+
+#blocaffichagelivre {
+  text-align: justify;
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  flex-wrap: wrap;
+}
+
+#blocaffichagelivre section {
+  padding: 15px;
+  margin-right: 15px;
+}
+
+/* Placement section "Nouvelles" */
+
+#nouvelles {
+  display: flex;
+  position: absolute;
+  right: 0;
+}
+
+#nouvelles h3 {
+  letter-spacing: 2px;
+}
+
+#vl {
+  border-left: 2px solid black;
+  height: auto;
+  left: 70%;
+  margin-left: 3px;
+  top: 25;
 }
