--- a/Exercice CSS/Exercice 2/styles/styles.css
+++ b/Exercice CSS/Exercice 2/styles/styles.css
@@ -19,32 +19,36 @@ th, td
     color: blue;
 }
 
-.paire
+tbody tr:nth-child(2n)
 {
     background-color: #fcb941;
 }
 
-.impaire
+tbody tr:nth-child(2n+1)
 {
     background-color: #f1654c;
 }
 
-.td_impaire
+tbody tr:nth-child(2n+1) :first-child
 {
     background-color: #7e3661;
     color: #fff;
 }
 
-.td_paire
+tbody tr:nth-child(2n) :first-child
 {
     background-color: #888888;
     color: #fff;
 }
 
-.td_semaine
+tbody tr:nth-child(2n+1) :last-child
 {
-   background-color: #8870ff;
-   color: #fff;
+    background-color: #8870ff;
+    color: #fff;
 }
 
+thead th:last-child
+{
+    border: 4px solid green
+}
 /* comprendre nth child et recommencer l'exo
