--- a/Exercice CSS/RessourcesAdvenger/Ressources/styles/styles.css
+++ b/Exercice CSS/RessourcesAdvenger/Ressources/styles/styles.css
@@ -4,27 +4,24 @@ body /* background de la page web */ {
 
 /*font et couleur de la page */
 
-a, p, h2
-{
-    font-family: Impact, Haettenschweiler 'Arial Narrow Bold', sans-serif;
-    font-weight: lighter;
-
+a,
+p,
+h2 {
+  font-family: Impact, Haettenschweiler "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
 }
 
-h2
-{
-    font-weight: bolder;
-    color: #fd8b00;
+h2 {
+  font-weight: bolder;
+  color: #fd8b00;
 }
 
-p
-{
-    color: gray;
+p {
+  color: gray;
 }
 
-li
-{
-    color: gray;
+li {
+  color: gray;
 }
 
 /* Mise en page du header */
@@ -69,25 +66,22 @@ section p {
 }
 
 .imgfloat {
-  padding-top: 5px;
-  margin: 5px;
   float: left;
-  width: 350px;
+  width: 30%;
+  margin-right: 15px;
 }
 
 .imgh2 {
-  width: 35px;
+  width: 38px;
 }
 
 /* mise en page bouton lire plus */
 
 .lireplus {
   text-decoration: none;
-  color: black;
   background-color: #fd8b00;
-  padding: 15px;
   margin-left: 90%;
-  flex-wrap: wrap;
+  padding: 15px;
   color: white;
 }
 
@@ -95,67 +89,51 @@ section p {
 
 li {
   list-style-type: square;
+  font-size: 20px;
 }
 
 /* mise en page footer */
 
-footer
-{
-    color: gray;
-    padding: 20px;
-    width: 70%;
-    margin: auto;
-    text-align: center;
+footer {
+  color: gray;
+  padding: 20px;
+  width: 70%;
+  margin: auto;
+  text-align: center;
 }
-
 
 /* Responsive */
 
-@media screen and (max-width: 576px)
-{
-
-  header
-  {
+@media screen and (max-width: 576px) {
+  header {
     display: flex;
     flex-direction: column;
+    text-align: center;
+    padding: 25px;
   }
 
-  nav a
-  {
+  nav a {
     display: flex;
     flex-direction: column;
     padding: 5px;
   }
 
-  article
+  main
   {
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    padding: 25px;
   }
 
   .imgfloat
   {
-    width: 280px;
-    margin: auto;
+    width: 100%;
+    float: none;
+    margin-right: 0;
   }
 
   .lireplus
   {
-    text-align: center;
-    margin: 30%;
-
+    margin: auto;
+    padding-top: 10px;
   }
-
-  section p
-  {
-    font-size: 15px;
-  }
-
-  nav a
-  {
-    font-size: 15px;
-  }
-
-
-}  
+}
