--- a/Exercice CSS/shoesplash/css/style.css
+++ b/Exercice CSS/shoesplash/css/style.css
@@ -8,7 +8,7 @@ p {
   font-family: "Courgette", cursive;
 }
 
-#news h3
+#news h3, small
 {
   font-family: "Courgette", cursive;
 }
@@ -108,6 +108,7 @@ main /* largeur main + centrage contenue main */ {
   padding: 15px;
   position: absolute;
   left: 10px;
+  top: -9.5px;
   background-color: #f6d4f5;
   opacity: 0.7;
 }
@@ -177,17 +178,39 @@ main /* largeur main + centrage contenue main */ {
 #new h2
 {
   background-color: pink;
+  text-align: left;
+}
+
+#new h2 img
+{
+  margin-right: 15px;
+  margin-left: 5px;
 }
 
 #best h2
 {
-  background-color: green;
+  background-color: rgb(0, 204, 0);
+  text-align: left;
+}
+
+#best h2 img
+{
+  margin-right: 15px;
+  margin-left: 5px;
 }
 
 #crush h2
 {
   background-color: rgb(0, 192, 240);
+  text-align: left;
 }
+
+#crush h2 img
+{
+  margin-right: 15px;
+  margin-left: 5px;
+}
+
 /* FOOTER */
 
 footer /* largeur footer + centrage contenue footer */ {
