--- a/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/styles/style.css
+++ b/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/styles/style.css
@@ -4,7 +4,7 @@ header{
     opacity: 0.8;
 }
 
-
+/* mise page ul header*/
 
 /* Font style des lien du header */
 
@@ -18,6 +18,4 @@ h2{
     font-weight: light;
 }
 
-header img{
-    width: 100px;
-}
+
