Portefolio nav finis, a continuer sur le contenus

--- a/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/styles/style.css
+++ b/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/styles/style.css
@@ -4,6 +4,11 @@ header{
     opacity: 0.8;
 }
 
+/* Enlever soulignement a header */
+header a{
+    text-decoration: none;
+}
+
 /* mise page ul header*/
 
 /* Font style des lien du header */
