--- a/BOOTSTRAP/Site bootstrap/Portfolio/styles/style.css
+++ b/BOOTSTRAP/Site bootstrap/Portfolio/styles/style.css
@@ -22,6 +22,29 @@ header a{
     box-shadow: none;
 }
 
+/* modif couleur fleche carousel */
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    height: 75px;
+    width: 75px;
+    outline: black;
+    background-color: gray;
+    background-size: 50%, 50%;
+    border-radius: 15px;
+}
+
+.carousel-control-next,
+.carousel-control-prev /*, .carousel-indicators */ {
+    filter: invert(100%);
+}
+
+/* placement titre carousel */
+
+
+.carousel-caption{
+  
+}
+
+
 /* mise page ul header*/
 
 /* Font style des lien du header */
