--- a/JavaScript/Java_damnier/styles/style.css
+++ b/JavaScript/Java_damnier/styles/style.css
@@ -1,4 +1,40 @@
+* {
+    border-collapse: collapse;
+}
+
+body{
+    background: url(../img/chess-3801531_1920.jpg) no-repeat fixed center;
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+}
+
+h1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border: 2px solid black;
+    padding: 15px;
+}
+
+div{
+    margin-left: auto;
+    margin-right: auto;
+    
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 td{
-    padding: 10px;
-    border: 1px solid black;
+    padding: 30px;
+    border: 1px solid;
+}
+
+.fond-noir{
+    background-color: black;
 }
